Fix - Margin value for alignfull

--- a/style.css
+++ b/style.css
@@ -1738,8 +1738,8 @@ a#scroll-up:hover {
 
 .no-sidebar-full-width.boxed #primary .entry-content > .alignfull,
 .no-sidebar.boxed #primary .entry-content > .alignfull {
-	margin-left: -30px;
-	margin-right: -30px;
+	margin-left: -80px;
+	margin-right: -80px;
 }
 
 .no-sidebar-full-width.boxed #primary .entry-content > .alignfull.wp-block-cover,
